objects/FieloEE__BadgeMember__c.object
<CustomObject>
    <description>Badges achieved by each member.</description>
    <fields>
        <fullName>FieloCH__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>To Process</fullName>
                    <default>true</default>
                    <label>To Process</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Skip Engine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Badge2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Badge</label>
        <referenceTo>FieloEE__Badge__c</referenceTo>
        <relationshipLabel>Badge Member (Badge)</relationshipLabel>
        <relationshipName>BadgesMembers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Member2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Badge Member (Member)</relationshipLabel>
        <relationshipName>BadgesMembers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Badge Member</label>
    <nameField>
        <label>BadgeMember Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badge Member</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>